@@ -10,6 +10,8 @@ New in version 6.2.1
   - py-end-of-statement-bol
   - py-end-of-top-level-bol
 
+  - py-flycheck-mode - toggle `flycheck-mode' from menu "Checks"
+
 - New helper functions, like
   - py--end-of-block-bol-p
   - py--end-of-clause-bol-p
